add the htlc api and improve the txs api
